--- a/style.css
+++ b/style.css
@@ -9,16 +9,17 @@ ul {
 }
    
 body{
-    background-image: url("assets/Fundo.jpg");
+    background-image: url("assets/hi-tech-chip-skhema-protsessor-tranzistori-dorozhki-svechenie-104268.jpg");
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
-    background-color: #121214;
+    
 }
 body * {
     font-family: 'Inter', sans-serif;
     line-height: 160%;
 }
+
 
 header {
     padding-top: 32px;
@@ -28,7 +29,7 @@ header {
 header div{ 
     width: 120px;
     margin: auto;
-    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    background-image: linear-gradient(90deg, #7292fc 0%, #43E7AD 50.52%, #E2D45C 100%);
     border-radius: 50%;
     padding: 4px;
     display: flex;
@@ -55,13 +56,13 @@ main{
 
 section {
     color: white;
-    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
-    padding-top: 4px;
-    border-radius: 10px;
+    background-image: linear-gradient(90deg, #7292fc 0%, #43E7AD 50.52%, #E2D45C 100%);
+    padding-top: 7px;
+    border-radius: 15px;
 }
 
- section div{
-    background: #2A2634;
+section div{
+    background: #3f4649;
     padding: 32px;
     padding: 24px;
     border-radius: 8px;
@@ -112,10 +113,15 @@ section ul li:hover{
     order: 0;
     flex-grow: 0;
 }
-.social-list img{
-    width: 50px;
-    height: 50px;
+.tecno-list img{
+    width: 40px;
+    height: 40px;
 }
+.social-list img{
+    width: 40px;
+    height: 40px;
+}
+
 
 /*Animaçao*/
 
@@ -145,22 +151,25 @@ main section:nth-child(1){
 }
 
 main section:nth-child(2){
-    animation-delay: .4s;
+    animation-delay: .3s;
 }
 
 main section:nth-child(3){
+    animation-delay: .5s;
+}
+main section:nth-child(4){
     animation-delay: .7s;
 }
 
 @keyframes fromButton {
     from {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateX(30px);
     }
 
     to {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateX(0);
     }
 
 }
