--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
+    background-color: #111213;
     
 }
 body * {
