--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ ul {
 }
    
 body{
-    background-image: url("assets/hi-tech-chip-skhema-protsessor-tranzistori-dorozhki-svechenie-104268.jpg");
+    background-image: url("assets/download.jpeg");
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
